--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css"
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 <title>Delani Studio</title>
-<
+<meta charset ="utf-8">
+<body>
+<div class="container start</div>
+  <img scr="images/assets/backgrounds/h_img.jpg">
+<h1>Welcome </h1>
+<h1>To Delani Studio</h1>
+<p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
