--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css"
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 <title>Delani Studio</title>
-<meta charset ="utf-8">
+<meta charset="utf-8">
 <body>
-<div class="container start</div>
-  <img scr="images/assets/backgrounds/h_img.jpg">
-<h1>Welcome </h1>
-<h1>To Delani Studio</h1>
-<p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+<div class="container">
+<div class="stairs-image">
+<img src="images/assets/backgrounds/h_img.jpg">
+</div>
+<div class="stairs-image">
+<div class="stairs-text">
+  <h1>Welcome</h1>
+  <h1>To Delani Studio</h1>
+  <h1>AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h1>
+  </div>
+  </div>
+  </div>
